configs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: autocomplete-service
spec:
  selector:
    app: autocomplete
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
